# survcafe

./: LICENSE
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  libcamera_server.cpp  libcamera_server.hpp
src/core/: CMakeLists.txt  frame_info.hpp  libcamera_app.cpp  libcamera_app.hpp  libcamera_encoder.hpp  options.cpp  options.hpp  video_options.hpp
src/encoder/: CMakeLists.txt  encoder.cpp  h264_encoder.cpp
src/image/: bmp.cpp  dng.cpp  image.hpp  jpeg.cpp  png.cpp  yuv.cpp
src/output/: net_output.cpp  net_output.hpp  output.cpp
